--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>HELLEOEOOEEL</h1>
+    <script>
+        const num = 42;
+        const str = "Hello";
+        const bool = true;
+        const undef = undefined;
+        const big = 9007199254740991n;
+        const sym = Symbol("id");
+        const obj = {
+            name: "Yura",
+            age: 18
+        };
+
+        console.log(typeof num)
+        console.log(typeof str)
+        console.log(typeof bool)
+        console.log(typeof undef)
+        console.log(typeof big)
+        console.log(typeof sym)
+        console.log(typeof obj)
+    
+    </script>
 </body>
+
 </html>
