--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <script>
-        const num = 42;
+        /* const num = 42;
         const str = "Hello";
         const bool = true;
         const undef = undefined;
@@ -26,8 +26,13 @@
         console.log(typeof undef)
         console.log(typeof big)
         console.log(typeof sym)
-        console.log(typeof obj)
-    
+        console.log(typeof obj) */
+        //-----------------HW3_2------------------\\
+        const str1 = prompt("First line: ")
+        const str2 = prompt("Second line: ")
+        const str3 = prompt("Third line: ")
+
+        console.log(`Your lines ${str1}, ${str2}, ${str3} `)
     </script>
 </body>
 
