--- a/index.html
+++ b/index.html
@@ -28,11 +28,15 @@
         console.log(typeof sym)
         console.log(typeof obj) */
         //-----------------HW3_2------------------\\
-        const str1 = prompt("First line: ")
+        /* const str1 = prompt("First line: ")
         const str2 = prompt("Second line: ")
         const str3 = prompt("Third line: ")
 
         console.log(`Your lines ${str1}, ${str2}, ${str3} `)
+ */
+        //-----------------HW3_3--------------------\\
+        const num = prompt("Enter 5 digit number: ")
+        console.log(num.split("").join(" "))
     </script>
 </body>
 
