--- a/index.html
+++ b/index.html
@@ -9,34 +9,9 @@
 
 <body>
     <script>
-        /* const num = 42;
-        const str = "Hello";
-        const bool = true;
-        const undef = undefined;
-        const big = 9007199254740991n;
-        const sym = Symbol("id");
-        const obj = {
-            name: "Yura",
-            age: 18
-        };
-
-        console.log(typeof num)
-        console.log(typeof str)
-        console.log(typeof bool)
-        console.log(typeof undef)
-        console.log(typeof big)
-        console.log(typeof sym)
-        console.log(typeof obj) */
-        //-----------------HW3_2------------------\\
-        /* const str1 = prompt("First line: ")
-        const str2 = prompt("Second line: ")
-        const str3 = prompt("Third line: ")
-
-        console.log(`Your lines ${str1}, ${str2}, ${str3} `)
- */
-        //-----------------HW3_3--------------------\\
-        const num = prompt("Enter 5 digit number: ")
-        console.log(num.split("").join(" "))
+        //HW4_1
+        const name = prompt("Enter your name: ")
+        alert(`Hello, ${name}! How are you?`)
     </script>
 </body>
 
