--- a/index.html
+++ b/index.html
@@ -5,38 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="hw6_1.js" defer></script>
+    <script src="hw6_2.js" defer></script>
+    <script src="hw6_3.js" defer></script>
 </head>
 
 <body>
     <script>
-        /* const num = 42;
-        const str = "Hello";
-        const bool = true;
-        const undef = undefined;
-        const big = 9007199254740991n;
-        const sym = Symbol("id");
-        const obj = {
-            name: "Yura",
-            age: 18
-        };
 
-        console.log(typeof num)
-        console.log(typeof str)
-        console.log(typeof bool)
-        console.log(typeof undef)
-        console.log(typeof big)
-        console.log(typeof sym)
-        console.log(typeof obj) */
-        //-----------------HW3_2------------------\\
-        /* const str1 = prompt("First line: ")
-        const str2 = prompt("Second line: ")
-        const str3 = prompt("Third line: ")
-
-        console.log(`Your lines ${str1}, ${str2}, ${str3} `)
- */
-        //-----------------HW3_3--------------------\\
-        const num = prompt("Enter 5 digit number: ")
-        console.log(num.split("").join(" "))
     </script>
 </body>
 
